Font overflowing of testimonial was corrected

--- a/src/Components/Testimonials/Testimonials.css
+++ b/src/Components/Testimonials/Testimonials.css
@@ -64,6 +64,9 @@
 .testimonial>:nth-child(3) {
     font-size: small !important;
 }
+.testimonial>:nth-child(4) {
+    font-size: medium !important;
+}
 
 .t-wrapper .swiper {
     width: 100%;
